2024 shorts v1.2 added gallery item details

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         function gtag() {
             dataLayer.push(arguments);
         }
+
         gtag("js", new Date());
         gtag("config", "G-SLNV7GLXM4");
     </script>
@@ -18,6 +19,7 @@
     <meta name="description" content="Oct 5-6 2024 in Kyiv — Livestream also available. Join us!"/>
     <meta name="author" content="@noeltock"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://vpdfo.org/"/>
@@ -41,9 +43,9 @@
           rel="stylesheet"/>
     <link href="https://fonts.cdnfonts.com/css/muller-next-expanded-trial" rel="stylesheet">
     <script src="https://cdn.hadronid.net/hadron.js?url=https%3A%2F%2Fbefonts.com%2Fmuller-next-font-family.html&amp;ref=https%3A%2F%2Fwww.google.com%2F&amp;_it=amazon&amp;partner_id=617"></script>
-<!--    <link rel="stylesheet" href="main-styles.css?v=3"/>-->
+    <!--    <link rel="stylesheet" href="main-styles.css?v=3"/>-->
     <link rel="stylesheet" href="main-styles.css?v=5"/>
-    <script defer src="script.js?v=2"></script>
+<!--    <script defer src="script.js?v=2"></script>-->
 </head>
 
 <body class="bg-gray-800 text-white font-inter">
@@ -52,10 +54,10 @@
         <!--            <h1 class="absolute bg-hat leading-[0.95] px-6 top-[50%] -left-4 md:-left-14 z-10 text-8xl md:text-[15rem] text-gray-900 font-extrabold font-staat -skew-y-2 tracking-wide rounded-xl">-->
         <!--                #VPDFO!-->
         <!--            </h1>-->
-<!--        <div class="absolute shadow-2xl top-5 right-4 md:top-10 md:right-8 z-10 leading-none py-2 px-4 rounded-2xl">-->
-<!--            <a href="https://vpdfo.org/"><img class="w-16 inline-block mr-2" src="flag-uk.png"/></a>-->
-<!--            <a href="ua.html"><img class="w-16 inline-block" src="flag-ua.png"/></a>-->
-<!--        </div>-->
+        <!--        <div class="absolute shadow-2xl top-5 right-4 md:top-10 md:right-8 z-10 leading-none py-2 px-4 rounded-2xl">-->
+        <!--            <a href="https://vpdfo.org/"><img class="w-16 inline-block mr-2" src="flag-uk.png"/></a>-->
+        <!--            <a href="ua.html"><img class="w-16 inline-block" src="flag-ua.png"/></a>-->
+        <!--        </div>-->
 
         <img class="-skew-y-2" style="height: 70vh" src="background_text.png"/>
     </div>
@@ -84,14 +86,15 @@
         <h1 class="relative md:text-5xl text-hat font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5">
             We invite you to enjoy
         </h1>
-<!--        <h1 class="relative md:text-5xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5"style="text-align:center">-->
-<!--            CVIT POP-UP MARKET-->
-<!--        </h1>-->
-        <p class="relative md:text-5xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5 " style="text-align:center">
+        <!--        <h1 class="relative md:text-5xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5"style="text-align:center">-->
+        <!--            CVIT POP-UP MARKET-->
+        <!--        </h1>-->
+        <p class="relative md:text-5xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5 "
+           style="text-align:center">
             <strong>CVIT POP-UP MARKET</strong><br/>
             <strong>MRIYA FILM FESTIVAL</strong><br/>
             <strong>FOOD SPOTS</strong><br/>
-            <strong>PHOTO-ART  EXHIBITION</strong><br/>
+            <strong>PHOTO-ART EXHIBITION</strong><br/>
             <strong>WAR PANEL DISCUSSIONS</strong><br/>
             <strong>MAIN STAGE</strong><br/>
         </p>
@@ -99,7 +102,8 @@
         <h1 class="relative text-6xl font-extrabold mt-10 text-hat font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5">
             LINE UP
         </h1>
-        <p class="relative md:text-5xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5 " style="text-align:center">
+        <p class="relative md:text-5xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5 "
+           style="text-align:center">
             <strong>ALEX SAVAGE</strong><br/>
             <strong>IGOR ZADOROZHNYI</strong><br/>
             <strong>КНЯЗЬ ВОЛОДИМИР</strong><br/>
@@ -111,22 +115,22 @@
             <strong>YUVI</strong><br/>
         </p>
 
-<!--        <p class="mt-6 text-xl leading-8 text-hat">-->
-<!--            <strong>ALEX SAVAGE</strong><br/>-->
-<!--            <strong>IGOR ZADOROZHNYI</strong><br/>-->
-<!--            <strong>КНЯЗЬ ВОЛОДИМИР</strong><br/>-->
-<!--            <strong>NEVERLEAVETHEDISCO</strong><br/>-->
-<!--            <strong>OI FUSK</strong><br/>-->
-<!--            <strong>ПРОКЛЯТИЙ Х..Й</strong><br/>-->
-<!--            <strong>TOFUDJ</strong><br/>-->
-<!--            <strong>PRESSURE</strong><br/>-->
-<!--            <strong>YUVI</strong><br/>-->
-<!--&lt;!&ndash;            Coming soon&ndash;&gt;-->
-<!--        </p>-->
+        <!--        <p class="mt-6 text-xl leading-8 text-hat">-->
+        <!--            <strong>ALEX SAVAGE</strong><br/>-->
+        <!--            <strong>IGOR ZADOROZHNYI</strong><br/>-->
+        <!--            <strong>КНЯЗЬ ВОЛОДИМИР</strong><br/>-->
+        <!--            <strong>NEVERLEAVETHEDISCO</strong><br/>-->
+        <!--            <strong>OI FUSK</strong><br/>-->
+        <!--            <strong>ПРОКЛЯТИЙ Х..Й</strong><br/>-->
+        <!--            <strong>TOFUDJ</strong><br/>-->
+        <!--            <strong>PRESSURE</strong><br/>-->
+        <!--            <strong>YUVI</strong><br/>-->
+        <!--&lt;!&ndash;            Coming soon&ndash;&gt;-->
+        <!--        </p>-->
 
-<!--        <h2 class="text-3xl font-bold mb-5 decoration-sky-500 decoration-2 underline-offset-4 text-center md:text-left">-->
-<!--            Coming soon-->
-<!--        </h2>-->
+        <!--        <h2 class="text-3xl font-bold mb-5 decoration-sky-500 decoration-2 underline-offset-4 text-center md:text-left">-->
+        <!--            Coming soon-->
+        <!--        </h2>-->
 
 
         <!--            <div class="md:flex">-->
@@ -201,7 +205,7 @@
             Tickets & Livestream
         </h1>
 
-        <div class="md:flex mt-5" >
+        <div class="md:flex mt-5">
             <div class="basis-1/2">
                 <h2 class="text-2xl font-bold mb-5" style="margin-bottom: 24px;margin-top: 24px">
                     → PayPal
@@ -238,12 +242,13 @@
                     <strong>2-Day Livestream Access</strong><br/>
                     Join our festival
                 </a>
-<!--                <p class="mt-5 leading-6">-->
-<!--                    You can also buy a ticket at the door on the day for 100 UAH.-->
-<!--                </p>-->
+                <!--                <p class="mt-5 leading-6">-->
+                <!--                    You can also buy a ticket at the door on the day for 100 UAH.-->
+                <!--                </p>-->
             </div>
         </div>
-        <h2 class="relative text-4xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5" style="margin-top: 16px">
+        <h2 class="relative text-4xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5"
+            style="margin-top: 16px">
             <strong>You can also buy tickets at the door on the 5th and 6th of October:</strong><br/>
 
             <div style="text-align:center; margin-top: 24px" class="text-hat">
@@ -253,57 +258,57 @@
         </h2>
 
 
-<!--                    <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">-->
-<!--                        MERCH-->
-<!--                    </h1>-->
-<!--                    <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
-<!--                    <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
-<!--                    </div>-->
+        <!--                    <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">-->
+        <!--                        MERCH-->
+        <!--                    </h1>-->
+        <!--                    <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
+        <!--                    <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
+        <!--                    </div>-->
 
-                    <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
-                        GALLERY
-                    </h1>
-<!--                    <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
-<!--                    <div id="gallery-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gallery-container">-->
+        <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
+            GALLERY
+        </h1>
+        <!--                    <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
+        <!--                    <div id="gallery-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gallery-container">-->
 
-                    <div id="gallery-container" class="gallery-container">
-<!--                        <div class="gallery-item relative">-->
-<!--                            <img class="protect-image" src="o_combo.JPG" />-->
-<!--                            <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-<!--                            <div style="display: flex; justify-content: center">-->
-<!--                                <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
-<!--                                    Buy-->
-<!--                                </button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-                    </div>
+        <div id="gallery-container" class="gallery-container">
+            <!--                        <div class="gallery-item relative">-->
+            <!--                            <img class="protect-image" src="o_combo.JPG" />-->
+            <!--                            <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
+            <!--                            <div style="display: flex; justify-content: center">-->
+            <!--                                <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
+            <!--                                    Buy-->
+            <!--                                </button>-->
+            <!--                            </div>-->
+            <!--                        </div>-->
+        </div>
 
-<!--                    <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
-<!--                      <div class="relative">-->
-<!--                        <img src="o_combo.JPG" />-->
-<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-<!--                      </div>-->
-<!--                      <div class="relative">-->
-<!--                        <img src="o_tee.JPG" />-->
-<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Tee Orange</strong><br />£19 / 800 UAH</div>-->
-<!--                      </div>-->
-<!--                      <div class="relative">-->
-<!--                        <img src="o_hood.JPG" />-->
-<!--                        <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hoodie Orange</strong><br />£29 / 1250 UAH</div>-->
-<!--                      </div>-->
-<!--                      <div class="relative">-->
-<!--                        <img src="b_hat.JPG" />-->
-<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hat Black</strong><br />£17.50 / 750 UAH</div>-->
-<!--                      </div>-->
-<!--                      <div class="relative">-->
-<!--                        <img src="b_tee.JPG" />-->
-<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Tee Black</strong><br />£23 / 1000 UAH</div>-->
-<!--                      </div>-->
-<!--                      <div class="relative">-->
-<!--                        <img src="b_combo.JPG" />-->
-<!--                        <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hoodie Black</strong><br />£35 / 1500 UAH</div>-->
-<!--                      </div>-->
-<!--                    </div>-->
+        <!--                    <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
+        <!--                      <div class="relative">-->
+        <!--                        <img src="o_combo.JPG" />-->
+        <!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
+        <!--                      </div>-->
+        <!--                      <div class="relative">-->
+        <!--                        <img src="o_tee.JPG" />-->
+        <!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Tee Orange</strong><br />£19 / 800 UAH</div>-->
+        <!--                      </div>-->
+        <!--                      <div class="relative">-->
+        <!--                        <img src="o_hood.JPG" />-->
+        <!--                        <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hoodie Orange</strong><br />£29 / 1250 UAH</div>-->
+        <!--                      </div>-->
+        <!--                      <div class="relative">-->
+        <!--                        <img src="b_hat.JPG" />-->
+        <!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hat Black</strong><br />£17.50 / 750 UAH</div>-->
+        <!--                      </div>-->
+        <!--                      <div class="relative">-->
+        <!--                        <img src="b_tee.JPG" />-->
+        <!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Tee Black</strong><br />£23 / 1000 UAH</div>-->
+        <!--                      </div>-->
+        <!--                      <div class="relative">-->
+        <!--                        <img src="b_combo.JPG" />-->
+        <!--                        <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hoodie Black</strong><br />£35 / 1500 UAH</div>-->
+        <!--                      </div>-->
+        <!--                    </div>-->
 
         <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-8">
             Charities
@@ -335,6 +340,7 @@
         </h1>
     </div>
 </div>
+<script defer src="script.js?v=4"></script>
 </body>
 
 </html>
