--- a/src/gallery.html
+++ b/src/gallery.html
@@ -69,8 +69,8 @@
             <p id="bio"></p>
         </div>
 
-        <button class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="margin-top: 12px">Buy
-        </button>
+<!--        <button class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="margin-top: 12px">Buy-->
+<!--        </button>-->
     </div>
 </div>
 <script src="gallery_script.js"></script>
